--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 bg-black" id="bottombox"> 
                     <h5>abide in paradise</h5>                   
-			<p class="lead text-left">
+			<p class="text-left">
 				Lorem ipsum dolor sit amet, . Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui. Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. 
 			</p>
                 </div>
